2006-01-19  Marcus Crestani  <crestani@xemacs.org>

	* objects-x.c (x_find_charset_font): Add cast to fix C++ build.

2005-11-25  Mike Sperber  <mike@xemacs.org>

	* nt.c (init_mswindows_environment): Add EMACSEARLYPACKAGES,
	EMACSLATEPACKAGES, EMACSLASTPACKAGES.

	* config.h.in: 
	(PATH_EARLY_PACKAGE_DIRECTORIES, PATH_LATE_PACKAGE_DIRECTORIES)
	(PATH_LAST_PACKAGE_DIRECTORIES): Add.

	* paths.h.in: 
	(PATH_EARLY_PACKAGE_DIRECTORIES, PATH_LATE_PACKAGE_DIRECTORIES)
	(PATH_LAST_PACKAGE_DIRECTORIES): Add.

	* emacs.c: Add Vconfigure_early_package_directories,
	Vconfigure_late_package_directories,
	Vconfigure_last_package_directories.
	(complex_vars_of_emacs): Set them.

2005-12-25  Aidan Kehoe  <kehoea@parhasard.net>

	* alloc.c:
	* alloc.c (malloc_warning):
	* alloc.c (MALLOC_BEGIN):
	* alloc.c (FREE_OR_REALLOC_BEGIN):
	Revert the alloc warning bugfix, in response to Stephen's mail
	87acepzl6e.fsf@tleepslib.sk.tsukuba.ac.jp . 

2005-12-24  Aidan Kehoe  <kehoea@parhasard.net>

	* objects-x.c (x_font_instance_truename):
	* objects-x.c (x_find_charset_font):
	Reintroduce my change of 2005-12-20 and Stephen's of 2005-12-23,
	which my last commit overrode. 
	
2005-12-24  Aidan Kehoe  <kehoea@parhasard.net>

	* event-Xt.c:
 	Add two new lisp variables, x-us-keymap-description and
	x-us-keymap-first-keycode to better provide a fallback to the US
	layout with keyboards where typing the Roman alphabet and those
	punctuation symbols that have command bindings associated with
	them is difficult.
	* event-Xt.c (x_event_to_emacs_event): 
 	Use those two Lisp variables to improve Russian C-x processing.  
	* event-stream.c (command_builder_find_leaf): 
 	Make a comment more readable.  

2005-12-24  Aidan Kehoe  <kehoea@parhasard.net>

	* alloc.c (MALLOC_BEGIN):
	Assert that we're either not in malloc, or warning about memory
	being low. 
	* alloc.c (MALLOC_WARNING_BEGIN, MALLOC_WARNING_END):
	Add two clauses to set and clear a flag that we're in a low-memory
	warning situation. 